syntax = "proto3";

package protoapi;

import "google/protobuf/Empty.proto";
import "google/protobuf/Wrappers.proto";

option go_package = "github.com/Dwiyasa-Nakula/backend/musicplaylist";

// entitas Song
message Song {
    string id = 1;
    string title = 2;
    string artist = 3;
    string album = 4;
    string duration = 5;
    string link = 6;
}

message SongList {
    repeated Song list = 1;
}

service SongApi {
    rpc CreateSong(Song) returns (Song) {}
    rpc ListSongs(google.protobuf.Empty) returns (SongList) {}
    rpc UpdateSong(Song) returns (Song) {}
    rpc DeleteSong(google.protobuf.StringValue) returns (google.protobuf.BoolValue) {}
}